fixed text-align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2610,7 +2610,7 @@
 				.simplebl > header .title h3 {
 					font-weight: 800;
 					font-size: 1.5em;
-					text-align center;
+					text-align: center;
 				}
 
 				.simplebl > header .title > :last-child {
